# pake-gui

./: .gitignore  README.md  index.html  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  environment.rs  main.rs  project.rs
src/components/: CommandPreview.jsx  ConfigForm.jsx  EnvironmentCheck.jsx  ProjectManager.jsx  Settings.jsx
src/components/ui/: tabs.jsx
src/styles/: index.css
