[package]
name = "pake-gui"
version = "1.0.0"
description = "GUI for Pake CLI tool"
authors = ["MakotoArai"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/MakotoArai-CN/pake-gui"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [ "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
which = "6.0"
regex = "1.10"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
